# opengl-cherno

./: .gitignore  Readme.md  conanfile.py
src/: CMakeLists.txt
src/001-setup/: CMakeLists.txt  main.cpp
src/002-using-modern-opengl/: CMakeLists.txt  main.cpp
src/003-vertex-buffers/: CMakeLists.txt  main.cpp
src/004-vertex-attributes/: CMakeLists.txt  main.cpp
src/005-shaders/: CMakeLists.txt  main.cpp
src/006-shader-files/: CMakeLists.txt  main.cpp
src/007-index-buffers/: CMakeLists.txt  main.cpp
src/008-error-handling/: CMakeLists.txt  main.cpp
src/008-error-handling/res/shaders/: fragment.glsl
src/009-modern-error-handling/: CMakeLists.txt  main.cpp
src/010-uniforms/: CMakeLists.txt  main.cpp
src/011-vertex-arrays/: CMakeLists.txt  main.cpp  main.cpp.initial
src/012-abstracting-buffers/: CMakeLists.txt  VertexBuffer.h  main.cpp
src/012-abstracting-buffers/res/shaders/: fragment.glsl
src/013-abstracting-layout/: CMakeLists.txt  IndexBuffer.h  VertexArray.cpp  main.cpp
src/014-abstracting-shader/: CMakeLists.txt  Shader.h  main.cpp
src/015-abstracting-renderer/: CMakeLists.txt  Renderer.cpp  Shader.cpp  VertexBuffer.cpp  main.cpp
src/016-textures/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexBufferLayout.h  main.cpp
src/016-textures/res/shaders/: vertex.glsl
src/017-maths/: CMakeLists.txt  main.cpp
src/018-projection/: CMakeLists.txt  VertexBuffer.h  main.cpp
src/019-mvp-matrices/: CMakeLists.txt  Renderer.cpp  Shader.h  Texture.h  VertexArray.h  VertexBufferLayout.h  main.cpp
src/020-mvp-extra-exercise/: CMakeLists.txt  Readme.md  main.cpp
src/021-imgui/: CMakeLists.txt  main.cpp
src/022-multiple-objects/: CMakeLists.txt  IndexBuffer.cpp  main.cpp
src/023-test-framework-setup/: CMakeLists.txt  main.cpp
src/023-test-framework-setup/tests/: TestBase.h
src/024-creating-tests/: CMakeLists.txt  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.h  main.cpp
src/024-creating-tests/tests/: TestBase.h  TestClearColor.cpp  TestClearColor.h  TestCustomQuad_Color.cpp  TestCustomQuad_Color.h  TestCustomQuad_Uniform.cpp  TestCustomQuad_Uniform.h  TestMenu.cpp  TestMenu.h  TestTexture2D.cpp  TestTexture2D.h
(+5 files in other folders)
